update: rewrite the right path and build again by Vite

--- a/pages/Login/login.html
+++ b/pages/Login/login.html
@@ -14,15 +14,15 @@
     />
 
     <!-- icon  -->
-    <link rel="icon" href="/assets/images/favicon.ico" />
+    <link rel="icon" href="../../assets/images/favicon.ico" />
 
     <!-- axios  -->
-    <script src="/utils/axios.min.js"></script>
+    <script src="../../utils/axios.min.js"></script>
     <!-- axios cdn  -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script> -->
 
     <!-- css  -->
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
   </head>
 
   <body>
@@ -31,7 +31,7 @@
       <section class="login-img">
         <h3>TOODOO</h3>
         <h4>The cutest todo list.</h4>
-        <img src="/assets/images/logo_noback.png" alt="TOODOO Logo" />
+        <img src="../../assets/images/logo_noback.png" alt="TOODOO Logo" />
       </section>
 
       <section class="form-container">
@@ -148,6 +148,6 @@
     </section>
 
     <!-- js  -->
-    <script type="module" src="/pages/Login/login.js"></script>
+    <script src="./login.js"></script>
   </body>
 </html>
