--- a/pages/ToDoList/to_do_list.html
+++ b/pages/ToDoList/to_do_list.html
@@ -14,15 +14,15 @@
     />
 
     <!-- icon  -->
-    <link rel="icon" href="/assets/images/favicon.ico" />
+    <link rel="icon" href="../../assets/images/favicon.ico" />
 
     <!-- axios  -->
-    <script src="/utils/axios.min.js"></script>
+    <script src="../../utils/axios.min.js"></script>
     <!-- axios cdn  -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script> -->
 
     <!-- css  -->
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
   </head>
 
   <body>
@@ -31,7 +31,7 @@
         <div class="logo-container">
           <img
             class="logo-image"
-            src="/assets/images/logo_noback.png"
+            src="../../assets/images/logo_noback.png"
             alt="Logo"
           />
           <h2 class="logo">TOODOO</h2>
@@ -157,7 +157,7 @@
           <div class="task-clear-container hidden">
             <img
               class="task-clear-img"
-              src="/assets/images/logo_sleeping_noback.png"
+              src="../../assets/images/logo_sleeping_noback.png"
               alt="sleeping octopus"
             />
           </div>
@@ -238,7 +238,7 @@
     </div>
 
     <!-- js  -->
-    <script type="module" src="/utils/modals.js"></script>
-    <script type="module" src="/pages/ToDoList/to_do_list.js"></script>
+    <script src="../../utils/modals.js"></script>
+    <script src="./to_do_list.js"></script>
   </body>
 </html>
