--- a/public/pages/Login/login.html
+++ b/public/pages/Login/login.html
@@ -17,13 +17,11 @@
     <link rel="icon" href="/assets/favicon-DezI4Qun.ico" />
 
     <!-- axios  -->
-    <script src="/utils/axios.min.js"></script>
+    <script src="../../utils/axios.min.js"></script>
     <!-- axios cdn  -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script> -->
 
     <!-- css  -->
-    <script type="module" crossorigin src="/assets/login-Hj4N_pYx.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/main-B6Q3Bb71.js">
     <link rel="stylesheet" crossorigin href="/assets/main-BxzvvDg5.css">
   </head>
 
@@ -149,6 +147,7 @@
       </section>
     </section>
 
-    <!-- js  -->
+    <!-- js  -->
+    <script src="./login.js"></script>
   </body>
 </html>
