--- a/public/pages/ToDoList/to_do_list.html
+++ b/public/pages/ToDoList/to_do_list.html
@@ -17,13 +17,11 @@
     <link rel="icon" href="/assets/favicon-DezI4Qun.ico" />
 
     <!-- axios  -->
-    <script src="/utils/axios.min.js"></script>
+    <script src="../../utils/axios.min.js"></script>
     <!-- axios cdn  -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script> -->
 
     <!-- css  -->
-    <script type="module" crossorigin src="/assets/todo-CHAcJjf6.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/main-B6Q3Bb71.js">
     <link rel="stylesheet" crossorigin href="/assets/main-BxzvvDg5.css">
   </head>
 
@@ -239,6 +237,8 @@
       </div>
     </div>
 
-    <!-- js  -->
+    <!-- js  -->
+    <script src="../../utils/modals.js"></script>
+    <script src="./to_do_list.js"></script>
   </body>
 </html>
