feat: add open graph metadata

--- a/pages/ToDoList/to_do_list.html
+++ b/pages/ToDoList/to_do_list.html
@@ -3,7 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TOODOO</title>
+    <title>TOODOO - Your cutest Todo List</title>
+    <meta
+      name="description"
+      content="Manage your tasks easily with TOODOO - The cutest and simplest web todo list."
+    />
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="TOODOO - Your Simple Todo List" />
+    <meta
+      property="og:description"
+      content="Manage your tasks easily with TOODOO - The cutest and simplest web todo list."
+    />
+    <meta
+      property="og:image"
+      content="https://jacky1a2a3a4a.github.io/TOODOO/assets/images/logo_noback.png"
+    />
+    <meta
+      property="og:url"
+      content="https://jacky1a2a3a4a.github.io/TOODOO/pages/to_do_list.html"
+    />
+    <meta property="og:type" content="website" />
 
     <!-- 字體  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
